<resources>
    <string name="app_name" translatable="false">IP Subnet Calculator</string>
    <string name="calcola">Calcola</string>
    <string name="indirizzo_ip">Indirizzo IP</string>
    <string name="maschera">Maschera</string>
    <string name="indirizzo_ip_inserito">Indirizzo IP in binario</string>
    <string name="maschera_di_sottorete_inserita">Maschera di sottorete inserita</string>
    <string name="indirizzi_disponibili">Numero indirizzi disponibili</string>
    <string name="intervallo_indirizzi">Intervallo indirizzi disponibili</string>
    <string name="primo_indirizzo">Primo indirizzo disponibile per gli host</string>
    <string name="ultimo_indirizzo">Ultimo indirizzo disponibile per gli host</string>
    <string name="broadcast">Indirizzo di broadcast</string>
    <string name="gateaway">Indirizzo di gateaway</string>
    <string name="risultati_vuoti">I risultati appariranno qui</string>
    <string name="test_risultati">test risultati</string>
    <string name="_192" translatable="false">192</string>
    <string name="_168" translatable="false">168</string>
    <string name="_1" translatable="false">1</string>
    <string name="_0" translatable="false">0</string>
    <string name="punto" translatable="false">.</string>
    <string name="_24" translatable="false">24</string>
    <string name="maschera_titolo">Maschera:      /</string>
    <string name="indirizzo_ip_titolo">Indirizzo IP:</string>
    <string name="slash" translatable="false">/</string>
    <string name="indirizzo_di_rete">Indirizzo di rete</string>
    <string name="action_settings" >Impostazioni</string>
    <string name="titolo" translatable="false">IP Subnet Calculator</string>
    <string name="calcolabis">CALCOLA</string>
    <string name="wildcard">Wildcard</string>
    <string name="pubblicit">Pubblicità</string>
    <string name="errVal">"Inserisci valori minori di 255 per l'IP e minori di 32 per la maschera"</string>
    <string name="errNul">"Riempi tutti i campi"</string>
    <string name="esempio">"Esempio"</string>
    <string name="cancella">"Cancella"</string>
    <string name="informazioni">Informazioni</string>
    <string name="chi_siamo">Chi sono</string>
    <string name="michele_cazzaro" translatable="false">Michele Cazzaro</string>
    <string name="ennio_italiano" translatable="false">Ennio Italiano</string>
    <string name="studente">Studente @ UNIPD</string>
    <string name="contatti">Contatti</string>
    <string name="email" translatable="false">GitHub</string>
    <string name="sviluppo">L\'applicazione non è più mantenuta da me, puoi contribuire tramite GitHub.</string>
    <string name="vitto">Con la partecipazione di Vittorio Campagnolo.</string>
    <string name="logo_ennio_italiano" translatable="false">Logo Ennio Italiano</string>
    <string name="logo_michele_cazzaro" translatable="false">Logo Michele Cazzaro</string>
    <string name="condividi">Condividi l\'app</string>
    <string name="rate_and_share">Rate and share</string>
    <string name="play_store" translatable="false">Play Store</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="shareApp">IP Subnet Calculator - Try it now! https://bit.ly/2LBZPMx</string>
    <string name="shareWith">Share with:</string>
    <string name="privacyPolicy" translatable="false">"## Privacy Policy

EnMic built the IP Subnet Calculator app as an Ad Supported app. This SERVICE is provided by EnMic at no cost and is intended for use as is.

This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at IP Subnet Calculator unless otherwise defined in this Privacy Policy.

**Information Collection and Use**

For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Android Advertising ID. The information that we request will be retained by us and used as described in this privacy policy.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

*   [Google Play Services](https://www.google.com/policies/privacy/)
*   [AdMob](https://support.google.com/admob/answer/6128543?hl=en)
*   [Firebase Analytics](https://firebase.google.com/policies/analytics)

**Log Data**

We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

**Cookies**

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

**Service Providers**

We may employ third-party companies and individuals due to the following reasons:

*   To facilitate our Service;
*   To provide the Service on our behalf;
*   To perform Service-related services; or
*   To assist us in analyzing how our Service is used.

We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

**Security**

We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.

**Links to Other Sites**

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

**Children’s Privacy**

These Services do not address anyone under the age of 13\. We do not knowingly collect personally identifiable information from children under 13\. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.

**Changes to This Privacy Policy**

We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

**Contact Us**

If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at EnMic.

This privacy policy page was created at [privacypolicytemplate.net](https://privacypolicytemplate.net) and modified/generated by [App Privacy Policy Generator](https://app-privacy-policy-generator.firebaseapp.com/)."</string>
</resources>