<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/ctlAb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleGravity="top"
        app:layout_scrollFlags="scroll|enterAlways">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar" />

    </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.card.MaterialCardView
                android:id="@+id/chiSiamoCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="?attr/colorButtonNormal"
                app:strokeWidth="0dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/chisiamo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/googlesansbold"
                        android:text="@string/chi_siamo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/logoE"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:clickable="true"
                        android:contentDescription="@string/logo_ennio_italiano"
                        android:focusable="true"
                        android:onClick="playDev"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/chisiamo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:srcCompat="@drawable/e2" />

                    <TextView
                        android:id="@+id/ennio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="24dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="playDev"
                        android:text="@string/ennio_italiano"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintStart_toEndOf="@+id/logoE"
                        app:layout_constraintTop_toBottomOf="@+id/chisiamo" />

                    <TextView
                        android:id="@+id/studenteE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="playDev"
                        android:text="@string/studente"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        app:layout_constraintStart_toEndOf="@+id/logoE"
                        app:layout_constraintTop_toBottomOf="@+id/ennio" />

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/contattiCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chiSiamoCV"
                app:strokeColor="?attr/colorButtonNormal"
                app:strokeWidth="1dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/contattaci"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/googlesansbold"
                        android:text="@string/contatti"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/testo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/sviluppo"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contattaci" />

                    <ImageView
                        android:id="@+id/mail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:clickable="true"
                        android:contentDescription="@string/email"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:onClick="email"
                        android:scaleX="0.85"
                        android:scaleY="0.85"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/testo"
                        app:srcCompat="@drawable/outline_email_24" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="email"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintStart_toEndOf="@id/mail"
                        app:layout_constraintTop_toBottomOf="@id/testo" />

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/playCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contattiCV"
                app:strokeColor="?attr/colorButtonNormal"
                app:strokeWidth="1dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>